Fix css visibility prop

--- a/src/iframemanager.css
+++ b/src/iframemanager.css
@@ -25,6 +25,7 @@ div[data-service] .cll,
 div[data-service] .cll a,
 div[data-service] .cll button {
     all: initial;
+    visibility: unset;
     font-size: inherit;
     font-family: inherit;
     font-weight: inherit;
